k8s-aws/networkpolicy/front/front-ingress-core.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-ingress-core
  namespace: bravo-front-ns
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-core-ns
    ports:
    - protocol: TCP
      port: 80
