k8s-aws/networkpolicy/front/front-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-ingress-external
  namespace: bravo-front-ns
spec:
  podSelector:
    matchLabels:
      app: react
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 3000
